fix: fix alignment for contact form

--- a/styles.css
+++ b/styles.css
@@ -380,6 +380,7 @@ li.project-desc {
   text-align: center;
 }
 form {
+  margin: 0;
   width: fit-content;
 }
 label {
